# exampleApplications

./: CMakeLists.txt
CubeTestApp/: CMakeLists.txt  Color2.cpp  Color2.h  CubeTest.cpp  CubeTest.h
Impulse/: CMakeLists.txt  Impulse.cpp  Impulse.h  main.cpp
Rainbow/: rainbow.cpp
Rainbow2/: CMakeLists.txt
